==> FreeRTOS/FreeRTOS/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/portable/NetworkInterface/STM32Hxx/NetworkInterface.c <==
#include <string.h>
#include "FreeRTOS.h"
#include "task.h"
#include "queue.h"
#include "semphr.h"
#include "FreeRTOS_IP.h"
#include "FreeRTOS_Sockets.h"
#include "FreeRTOS_IP_Private.h"
#include "FreeRTOS_DNS.h"
#include "NetworkBufferManagement.h"
#include "NetworkInterface.h"
#include "phyHandling.h"
#include "stm32h7xx_hal.h"
#define EMAC_IF_RX_EVENT		1UL
#define EMAC_IF_TX_EVENT		2UL
#define EMAC_IF_ERR_EVENT		4UL
	#define niEMAC_HANDLER_TASK_NAME			"EMAC-task"
	#define niEMAC_HANDLER_TASK_STACK_SIZE		( 4 * configMINIMAL_STACK_SIZE )
	#define niEMAC_HANDLER_TASK_PRIORITY		configMAX_PRIORITIES - 1

BaseType_t xNetworkInterfaceInitialise( void )
{
BaseType_t xResult;
HAL_StatusTypeDef xHalEthInitStatus;
size_t uxIndex = 0;

	if( xMacInitStatus == eMACInit )
	{
		/*
		 * Initialize ETH Handler
		 * It assumes that Ethernet GPIO and clock configuration
		 * are already done in the ETH_MspInit()
		 */
		xEthHandle.Instance = ETH;
		xEthHandle.Init.MACAddr = ( uint8_t *)FreeRTOS_GetMACAddress();
		xEthHandle.Init.MediaInterface = HAL_ETH_RMII_MODE;
		xEthHandle.Init.TxDesc = DMATxDscrTab;
		xEthHandle.Init.RxDesc = DMARxDscrTab;
		xEthHandle.Init.RxBuffLen = ( ETH_RX_BUF_SIZE - ipBUFFER_PADDING ) & ~( ( uint32_t ) 3U );

		/* Make sure that all unused fields are cleared. */
		memset( &( DMATxDscrTab ), '\0', sizeof( DMATxDscrTab ) );
		memset( &( DMARxDscrTab ), '\0', sizeof( DMARxDscrTab ) );

		xHalEthInitStatus = HAL_ETH_Init( &( xEthHandle ) );

		/* Only for inspection by debugger. */
		( void ) xHalEthInitStatus;

		/* Configuration for HAL_ETH_Transmit(_IT). */
		memset( &( xTxConfig ), 0 , sizeof( ETH_TxPacketConfig ) );
		xTxConfig.Attributes = ETH_TX_PACKETS_FEATURES_CRCPAD;

		#if( ipconfigDRIVER_INCLUDED_TX_IP_CHECKSUM != 0 )
		{
			//xTxConfig.ChecksumCtrl = ETH_CHECKSUM_IPHDR_PAYLOAD_INSERT_PHDR_CALC;
			xTxConfig.Attributes |= ETH_TX_PACKETS_FEATURES_CSUM;
			xTxConfig.ChecksumCtrl = ETH_DMATXNDESCRF_CIC_IPHDR_PAYLOAD_INSERT_PHDR_CALC;
		}
		#else
		{
			xTxConfig.ChecksumCtrl = ETH_CHECKSUM_DISABLE;
		}
		#endif
		xTxConfig.CRCPadCtrl = ETH_CRC_PAD_INSERT;

		/* This counting semaphore will count the number of free TX DMA descriptors. */
		xTXDescriptorSemaphore = xSemaphoreCreateCounting( ( UBaseType_t ) ETH_TX_DESC_CNT, ( UBaseType_t ) ETH_TX_DESC_CNT );
		configASSERT( xTXDescriptorSemaphore );

		xTransmissionMutex = xSemaphoreCreateMutex();
		configASSERT( xTransmissionMutex );

		/* Assign Rx memory buffers to a DMA Rx descriptor */
		for( uxIndex = 0; uxIndex < ETH_RX_DESC_CNT; uxIndex++ )
		{
		uint8_t *pucBuffer;

			#if( ipconfigZERO_COPY_RX_DRIVER != 0 )
			{
				pucBuffer = pucGetRXBuffer( ETH_RX_BUF_SIZE );
				configASSERT( pucBuffer != NULL );
			}
			#else
			{
				pucBuffer = Rx_Buff[ uxIndex ];
			}
			#endif

			HAL_ETH_DescAssignMemory( &( xEthHandle ), uxIndex, pucBuffer, NULL);
		}

		/* Configure the MDIO Clock */
		HAL_ETH_SetMDIOClockRange( &( xEthHandle ) );

		/* Initialize the MACB and set all PHY properties */
		prvMACBProbePhy();

		/* Force a negotiation with the Switch or Router and wait for LS. */
		prvEthernetUpdateConfig( pdTRUE );

		/* The deferred interrupt handler task is created at the highest
			possible priority to ensure the interrupt handler can return directly
			to it.  The task's handle is stored in xEMACTaskHandle so interrupts can
			notify the task when there is something to process. */
		if( xTaskCreate( prvEMACHandlerTask, niEMAC_HANDLER_TASK_NAME, niEMAC_HANDLER_TASK_STACK_SIZE, NULL, niEMAC_HANDLER_TASK_PRIORITY, &( xEMACTaskHandle ) ) == pdPASS )
		{
			/* The task was created successfully. */
			xMacInitStatus = eMACPass;
		}
		else
		{
			xMacInitStatus = eMACFailed;
		}
	}/* ( xMacInitStatus == eMACInit ) */

	if( xMacInitStatus != eMACPass )
	{
		/* EMAC initialisation failed, return pdFAIL. */
		xResult = pdFAIL;
	}
	else
	{
		if( xPhyObject.ulLinkStatusMask != 0uL )
		{
			xResult = pdPASS;
			FreeRTOS_printf( ( "Link Status is high\n" ) ) ;
		}
		else
		{
			/* For now pdFAIL will be returned. But prvEMACHandlerTask() is running
			and it will keep on checking the PHY and set 'ulLinkStatusMask' when necessary. */
			xResult = pdFAIL;
		}
	}

	return xResult;
}

BaseType_t xNetworkInterfaceOutput( NetworkBufferDescriptor_t * const pxDescriptor, BaseType_t xReleaseAfterSend )
{
BaseType_t xResult = pdFAIL;
TickType_t xBlockTimeTicks = pdMS_TO_TICKS( 100U );
uint8_t *pucTXBuffer;

	#if( ipconfigZERO_COPY_TX_DRIVER != 0 )
		/* Zero-copy method, pass the buffer. */
		pucTXBuffer = pxDescriptor->pucEthernetBuffer;
		/* As the buffer is passed to the driver, it must exist.
		The library takes care of this. */
		configASSERT( xReleaseAfterSend != pdFALSE );
	#else
		pucTXBuffer = Tx_Buff[ xEthHandle.TxDescList.CurTxDesc ];
		/* The copy method, left here for educational purposes. */
		configASSERT( pxDescriptor->xDataLength <= sizeof( Tx_Buff[ 0 ] ) );
	#endif

	ETH_BufferTypeDef xTransmitBuffer =
	{
		.buffer = pucTXBuffer,
		.len = pxDescriptor->xDataLength,
		.next = NULL	/* FreeRTOS+TCP does not use linked buffers. */
	};
	/* This is the total length, which is equal to the buffer. */
	xTxConfig.Length = pxDescriptor->xDataLength;
	xTxConfig.TxBuffer = &( xTransmitBuffer );

	/* This counting semaphore counts the number of free TX DMA descriptors. */
	if( xSemaphoreTake( xTXDescriptorSemaphore, xBlockTimeTicks ) != pdPASS )
	{
		/* If the logging routine is using the network, the following message
		may cause a new error message. */
		FreeRTOS_printf( ( "emacps_send_message: Time-out waiting for TX buffer\n" ) );
	}
	else
	{
		/* Memory barrier: Make sure that the data written to the packet buffer got written. */
		__DSB();
		/* Get exclusive accces to the TX process.
		Both the IP-task and the EMAC task will work on the TX process. */
		if( xSemaphoreTake( xTransmissionMutex, xBlockTimeTicks ) != pdFAIL )
		{
			#if( ipconfigZERO_COPY_TX_DRIVER != 0 )
			{
				/* Do not release the buffer. */
				xReleaseAfterSend = pdFALSE;
			}
			#else
			{
				memcpy( pucTXBuffer, pxDescriptor->pucEthernetBuffer, pxDescriptor->xDataLength );
				/* A memory barrier to make sure that the outgoing packets has been written
				to the physical memory. */
				__DSB();
			}
			#endif
			if( HAL_ETH_Transmit_IT( &( xEthHandle ), &( xTxConfig ) ) == HAL_OK)
			{
				xResult = pdPASS;
			}

			/* And release the mutex. */
			xSemaphoreGive( xTransmissionMutex );
		}

		/* Call the standard trace macro to log the send event. */
		iptraceNETWORK_INTERFACE_TRANSMIT();
	}
	if ( xReleaseAfterSend != pdFALSE )
	{
		vReleaseNetworkBufferAndDescriptor( pxDescriptor );
	}

	return xResult;
}

static void prvEMACHandlerTask( void *pvParameters )
{
/* When sending a packet, all descriptors in the transmission channel may
be occupied.  In stat case, the program will wait (block) for the counting
semaphore. */
const TickType_t ulMaxBlockTime = pdMS_TO_TICKS( 100UL );
size_t uxTXDescriptorsUsed = 0U;
size_t uxRXDescriptorsUsed = ETH_RX_DESC_CNT;

	( void ) pvParameters;

	for( ;; )
	{
	BaseType_t xResult = 0;

		#if( ipconfigHAS_PRINTF != 0 )
		{
		size_t uxUsed;
		size_t uxOwnCount;

			/* Call a function that monitors resources: the amount of free network
			buffers and the amount of free space on the heap.  See FreeRTOS_IP.c
			for more detailed comments. */
			vPrintResourceStats();

			/* Some more statistics: number of free descriptors. */
			uxUsed = ETH_TX_DESC_CNT - uxSemaphoreGetCount( xTXDescriptorSemaphore );
			if( uxTXDescriptorsUsed < uxUsed )
			{
				uxTXDescriptorsUsed = uxUsed;
				FreeRTOS_printf( ( "TX descriptors %u/%u\n",
								   uxTXDescriptorsUsed,
								   ETH_TX_DESC_CNT ) );
			}
  
			uxOwnCount = uxGetOwnCount( &( xEthHandle ) );
			if( uxRXDescriptorsUsed > uxOwnCount )
			{
				uxRXDescriptorsUsed = uxOwnCount;
				FreeRTOS_printf( ( "RX descriptors %u/%u\n",
								   uxRXDescriptorsUsed,
								   ETH_RX_DESC_CNT ) );
			}
		}
		#endif /* ( ipconfigHAS_PRINTF != 0 ) */

		ulTaskNotifyTake( pdFALSE, ulMaxBlockTime );

		/* Wait for the Ethernet MAC interrupt to indicate that another packet
		has been received. */
		if( ( ulISREvents & EMAC_IF_RX_EVENT ) != 0U )
		{
			vClearOptionBit( &( ulISREvents ), EMAC_IF_RX_EVENT );
			xResult = prvNetworkInterfaceInput();
		}

		/* When a packet has been transmitted, the descriptor must be
		prepared for a next transmission.
		When using zero-copy, the network buffer must be released
		( i.e. returned to the pool of network buffers ). */

		if( ( ulISREvents & EMAC_IF_TX_EVENT ) != 0U )
		{
			vClearOptionBit( &( ulISREvents ), EMAC_IF_TX_EVENT );
			if( xSemaphoreTake( xTransmissionMutex, 10000U ) != pdFAIL )
			{
				ETH_Clear_Tx_Descriptors( &( xEthHandle ) );
				xSemaphoreGive( xTransmissionMutex );
			}
		}

		/* Some error has occurred, possibly an overflow or an underflow. */
		if( ( ulISREvents & EMAC_IF_ERR_EVENT ) != 0U )
		{
			vClearOptionBit( &( ulISREvents ), EMAC_IF_ERR_EVENT );

			xEthHandle.gState = HAL_ETH_STATE_READY;
			/* Enable all interrupts */
			HAL_ETH_Start_IT( &( xEthHandle ) );
			xResult += prvNetworkInterfaceInput();
		}

		if( xPhyCheckLinkStatus( &xPhyObject, xResult ) != 0 )
		{
			/* Something has changed to a Link Status, need re-check. */
			prvEthernetUpdateConfig( pdFALSE );
		}
	}
}
